refresh tokens e http only cookies for more security for users

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,10 +1,12 @@
 @import "tailwindcss";
 
 #root {
-  max-width: 1280px;
+  width: 100vw;
+  height: 100dvh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  overflow: hidden;
 }
 
 :root {
